<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="10sp" android:paddingRight="10sp"
    android:layout_height="wrap_content"
    android:orientation="vertical" android:paddingTop="2sp">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/tvContact"
        android:text="@string/textoTituloEntrada"
        android:typeface="sans"
        android:textSize="16sp"
        android:textStyle="bold">
     </TextView>
    <LinearLayout android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/textoTituloField1"
            android:textSize="13sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoValorField1"
            android:layout_marginLeft="5dp"
            android:id="@+id/tvField1"
            android:textSize="13sp">
        </TextView>
    </LinearLayout>

    <LinearLayout android:id="@+id/LinearLayout03"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/textoTituloField3"
            android:textSize="13sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoValorField1"
            android:layout_marginLeft="5dp"
            android:id="@+id/tvField3"
            android:textSize="13sp">
        </TextView>
    </LinearLayout>



    <LinearLayout android:id="@+id/LinearLayout032"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/textoTituloField2"
            android:textSize="13sp">
         </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoValorField2"
            android:id="@+id/tvField2"
            android:textSize="13sp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1">
            </TextView>
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btnRemove"
            android:text="@string/textoBotonEntrada"
            android:onClick="onClickBotonBorrarFila"
            android:layout_height="40dip">
        </Button>
    </LinearLayout>

</LinearLayout>
